assets/styles/course.css
/* ... */
@media only screen and (max-width: 690px) {
    .svg-header-mob {
        top: -30vw;
    }

    .atestat__li span{
        margin-left: 30px;
    }

}

@media only screen and (max-width: 575px) {
    .lesson-toggle__item{
        font-size: 14px;
    }
    .container-slider .ui-card.prev, .container-slider .ui-card.next{
        transform: scale(1.1) translateY(10px) translateX(0px);
    }
    .container-slider .ui-card.active{
        transform: scale(1.5) translateY(0) translateX(0);
    }
    #menuToggleBtn{
        right: 18px;
    }
    .support__svg{
        height: 250px;
        top: auto;
        bottom: 400px;
    }

    .result__text{
        font-weight: 300;
    }
    .circle-svg{
        width: 90px;
        height: 90px;
    }

    .circle-svg__result_1{
        top: 155px;
        left: 20%;
    }

    .circle-svg__result_2{
        top: 265px;
        left: 47%;
    }

    .circle-svg__result_3{
        top: 375px;
        left: 30%;
    }

    .atestat-quote{
        font-size: 24px;
    }

    .atestat__li span{
        margin-left: 60px;
    }

    .review__container{
        padding-bottom: 110px;
    }

    .support__range{
        transform: scale(0.8);
    }
    .result__text{
        font-size: 18px;
        line-height: 28px;
        font-weight: 500;
    }
    .result-try__description{
        font-size: 14px;
        line-height: 24px;
        text-align: left;
    }
    .result__container{
        padding-bottom: 40px;
    }


    .testing{
        border: none;
        padding-left: 0;
        padding-right: 0;
    }
    .accordion__text {
        line-height: 18px;
    }

    .card-body {
        padding-left: 30px;
    }

    .accordion__list::before {
        left: -15px;
    }

    .accordion__icons {
        margin: 10px 0 15px 0;
    }

    .accordion__svg {
        margin: 0 6px;
    }

    .default-wrapper {
        max-width: auto !important;
    }

    .big-title {
        font-size: 32px;
    }

    .steps-title {
        font-size: 22px;
        line-height: 26px;
    }

    .header__info-buttons {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .header__info-btn {
        margin-bottom: 20px;
        margin-right: 0 !important;
    }

    .svg-header-mob {
        top: -60vw;
    }


    .header__counter-num,
    .header__counter-text {
        color: black;
    }


    .header__counter {
        margin-top: 25vw;
    }

    .teacher-container {
        padding-top: 80px;
        padding-bottom: 0px;
    }

    .info-counter {
        margin-top: 20px;
    }

    .info-counter__block,
    .info-counter__num {
        font-size: 18px;
    }

    .info-counter__text {
        font-size: 14px
    }

    ;

    .info-counter__text {
        margin-top: 0;
    }

    /* certification block */

    .certif__svg {
        height: 250px;
    }

    .certif__img img {
        height: 150px;
    }

    .certif__wrapper {
        padding-top: 50px;
    }

    .certif__svg {
        left: 0;
    }

    /* video block */

    .video__svg-container {
        top: 230px;
    }

    .video__svg {
        height: 434px;
        /* right: -30px !important; */
    }

    .video__title {
        margin-bottom: 400px;
        font-size: 24px;
    }

    .teacher-photo__svg {
        height: 550px;
        right: 0px;
        top: -50px;
    }

    .teacher-photo__img {
        right: 100px;
        width: 360px;
        height: 360px;
    }

    .teacher-photo__social {
        right: 265px;
        top: 425px;
    }


    /* footer block  */
    .footer nav .menu__list .menu__link {
        font-size: 14px;
        padding: 0 6px;
    }

    .footer__copyright,
    .footer-tel__link {
        font-size: 12px;
    }

}

@media only screen and (max-width: 479px) {
    .review__svg{
        height: 470px;
    }

    .title-review{
        margin-bottom: 120px;
    }


    .support__title{
        font-size: 26px;
    }

    .support__text{
        font-size: 14px;
        line-height: 30px;
    }

    .svg-header-mob {
        top: -40vw;
    }

    .header__info {
        margin-top: 35vw !important;
    }

    .header__info-title {
        font-size: 28px;
        line-height: 30px;
        margin-bottom: 55px;
    }

    .header__info-description {
        font-size: 16px;
        line-height: 24px;
    }

    .header__info-buttons {
        margin-top: 55px;
    }

    .video__title {
        margin-bottom: 420px;
    }
}

@media only screen and (max-width: 432px) {
    .svg-header-mob {
        top: -15vw;
    }

    .info-counter__block,
    .info-counter__num {
        font-size: 16px;
    }

    .info-counter__text {
        font-size: 12px
    }
    .support__range{
        transform: scale(0.6);
    }
}

@media only screen and (max-width: 350px) {
    .svg-header-mob {
        top: -0vw;
    }
}






@media only screen and (max-width: 475px) {
    .teacher-photo__svg {
        height: 400px;
    }

    .teacher-photo__img {
        right: 20px;
        width: 280px;
        height: 280px;
    }

    .teacher-photo__social {
        right: 140px;
        top: 335px;
    }

    .teacher-info {
        margin-top: 440px;
    }
}

@media only screen and (max-width: 430px) {
    .video__svg-container {
        top: 290px;
    }

}

